# clean-my-files

./: Cargo.toml  README.md
src/: cleanmymac.rs  main.rs  prelude.rs
